styles.css
:root {
    font-size: 16px;
}

*,
::before,
::after {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: sans-serif;
}

.grid-container {
    display: grid;
    grid-template-columns: 1fr 3fr 1fr;
    grid-template-rows: 1fr 4fr;
    width: 100vw;
    height: 100vh;
}



/* FONT FAMILY */


/* TEXT DECORATION */
h5 {
    margin-top: 1.25rem;
    margin-bottom: 0.75rem;
    color: rgb(139, 137, 137);
    font-style: italic;
}

.cards > h3 {
    margin-bottom: 0.5rem;
}


/* content*/
header {
    background-color: rgb(182, 216, 245);
    grid-row: 1;
    grid-column: 1 / 4;

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
.hdr {
    color: rgb(238, 238, 238);
    background-color: black;
    border-radius: 1rem;
    padding: 0.35rem;
    margin: 0.25rem;
    font-weight: 700;
}
input {
    border-radius: 1rem;
    height: 1.75rem;
    padding: 0.5rem;
}
.input-lbl {
    color: rgb(106, 116, 116);
    font-style: italic;
    margin-top: 0.5rem;
}


.links-n-buttons {
    background-color: rgb(106, 116, 116);
    grid-column: 1;
    grid-row: 2;
}

main {
    grid-column: 2;
    grid-row: 2;
    background-color: rgb(47, 95, 139);

    color: rgb(250, 245, 237);
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    justify-content: center;
}
.cards {
    display: flex;
    flex-direction: column;
    border: 1px solid wheat;
    height: 14rem;
    width: 12rem;
    align-items: center;
    text-align: center;
    
    margin: 5rem;
    padding: 1rem; 

    border-radius: 4rem 1rem;
    background-color: rgb(58, 69, 78);
}


.empty-container {
    background-color: rgb(110, 119, 119);
    grid-row: 2;
    grid-column: 3;
}

